commit e - mapa funcionar

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,17 @@
         android:glEsVersion="0x00020000"
         android:required="true" />
 
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
+    <permission
+        android:name="usuario.app.testarmenu.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="usuario.app.testarmenu.permission.MAPS_RECEIVE" />
 
     <application
         android:name="android.support.multidex.MultiDexApplication"
@@ -38,8 +48,8 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
         <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyADcwn4qFdGJsDB9jcDtizSRv21ihcfl5g" />
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyBkVs8iqeOwufEMFvrlKGiNRLdorpVOZZw" />
 
         <activity
             android:name=".Activity_about"
@@ -55,28 +65,15 @@
             android:label="@string/contato_c_mara_municipal_da_amadora"
             android:parentActivityName=".MainActivity" />
 
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="usuario.app.testarmenu.MainActivity" />
-
         <activity
             android:name=".Activity_ng"
             android:label="@string/contatos_novageo"
             android:parentActivityName=".MainActivity" />
 
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="usuario.app.testarmenu.MainActivity" />
-
         <activity
             android:name=".Activity_escola"
             android:label="@string/escola_secund_ria_matias_aires"
             android:parentActivityName=".MainActivity" />
-
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value="usuario.app.testarmenu.MainActivity" />
-
 
     </application>
 
