--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="usuario.app.testarmenu">
+    package="pt.novageo.niugisviewer">
 
     <uses-feature
         android:glEsVersion="0x00020000"
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <permission
-        android:name="usuario.app.testarmenu.permission.MAPS_RECEIVE"
+        android:name="pt.novageo.niugisviewer.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
 
     <uses-permission android:name="usuario.app.testarmenu.permission.MAPS_RECEIVE" />
@@ -26,7 +26,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SplashScreen"
+            android:name="pt.novageo.niugisviewer.SplashScreen"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -35,7 +35,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="pt.novageo.niugisviewer.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar" />
 
@@ -52,28 +52,28 @@
             android:value="AIzaSyBkVs8iqeOwufEMFvrlKGiNRLdorpVOZZw" />
 
         <activity
-            android:name=".Activity_about"
+            android:name="pt.novageo.niugisviewer.Activity_about"
             android:label="About"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="pt.novageo.niugisviewer.MainActivity" />
 
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
-            android:value="usuario.app.testarmenu.MainActivity" />
+            android:value="pt.novageo.niugisviewer.MainActivity" />
 
         <activity
-            android:name=".Activity_cma"
+            android:name="pt.novageo.niugisviewer.Activity_cma"
             android:label="@string/contato_c_mara_municipal_da_amadora"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="pt.novageo.niugisviewer.MainActivity" />
 
         <activity
-            android:name=".Activity_ng"
+            android:name="pt.novageo.niugisviewer.Activity_ng"
             android:label="@string/contatos_novageo"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="pt.novageo.niugisviewer.MainActivity" />
 
         <activity
-            android:name=".Activity_escola"
+            android:name="pt.novageo.niugisviewer.Activity_escola"
             android:label="@string/escola_secund_ria_matias_aires"
-            android:parentActivityName=".MainActivity" />
+            android:parentActivityName="pt.novageo.niugisviewer.MainActivity" />
 
     </application>
 
