--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,8 +8,18 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
+
+    <permission
+        android:name="android.permission.WRITE_EXTERNAL_STORAGE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <permission
+        android:name="android.permission.ACCESS_COARSE_LOCATION"
+        android:protectionLevel="signature" />
+
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <permission
@@ -82,6 +92,12 @@
 
         <activity
             android:name="pt.novageo.niugisviewer.Activity_ListData"
+            android:label="@string/verificar"
+
+            android:parentActivityName="pt.novageo.niugisviewer.MainActivity" />
+
+        <activity
+            android:name="pt.novageo.niugisviewer.Activity_informacao"
             android:label="@string/verificar"
             android:parentActivityName="pt.novageo.niugisviewer.MainActivity" />
 
