--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,8 +23,14 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <permission
-        android:name="android.permission.ACCESS_COARSE_LOCATION"
+    android:name="android.permission.ACCESS_COARSE_LOCATION"
+    android:protectionLevel="signature" />
+
+    <permission
+        android:name="android.permission.ACCESS_FINE_LOCATION"
         android:protectionLevel="signature" />
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
