--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-    <uses-permission android:name="android.permission.CAMERA"/>
+
     <uses-feature android:name="android.permission.camera"/>
 
     <permission
@@ -41,6 +41,12 @@
         android:protectionLevel="signature" />
 
     <uses-permission android:name="usuario.app.testarmenu.permission.MAPS_RECEIVE" />
+
+    <permission
+        android:name="pt.novageo.niugisviewer.permission.CAMERA"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="android.permission.CAMERA"/>
 
     <application
         android:name="android.support.multidex.MultiDexApplication"
