--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -122,7 +122,7 @@
 
         <activity
             android:name="pt.novageo.niugisviewer.Activity_mudar"
-            android:label="@string/verificar"
+            android:label="@string/mudar"
             android:parentActivityName="pt.novageo.niugisviewer.MainActivity" />
 
     </application>
