--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,41 +9,34 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
-
-    <uses-feature android:name="android.permission.camera"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="usuario.app.testarmenu.permission.MAPS_RECEIVE" />
 
     <permission
         android:name="android.permission.WRITE_EXTERNAL_STORAGE"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-
     <permission
         android:name="android.permission.READ_EXTERNAL_STORAGE"
         android:protectionLevel="signature" />
-
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <permission
         android:name="android.permission.ACCESS_COARSE_LOCATION"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
     <permission
         android:name="android.permission.ACCESS_FINE_LOCATION"
         android:protectionLevel="signature" />
-
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <permission
         android:name="pt.novageo.niugisviewer.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
 
-    <uses-permission android:name="usuario.app.testarmenu.permission.MAPS_RECEIVE" />
-
     <permission
-        android:name="pt.novageo.niugisviewer.permission.CAMERA"
+        android:name="android.permission.CAMERA"
         android:protectionLevel="signature" />
 
     <uses-permission android:name="android.permission.CAMERA"/>
