--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,14 +1,14 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 23
+    compileSdkVersion 25
     buildToolsVersion '25.0.0'
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
         applicationId "pt.app.niugisviewer"
-        minSdkVersion 10
-        targetSdkVersion 23
+        minSdkVersion 14
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
@@ -22,6 +22,11 @@ android {
     dexOptions {
         javaMaxHeapSize "2g"
     }
+
+    configurations.all {
+
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
 }
 
 dependencies {
@@ -32,5 +37,11 @@ dependencies {
     compile 'com.google.android.gms:play-services-maps:9.0.2'
     compile 'com.google.android.gms:play-services:9.0.2'
     compile 'com.android.support:multidex:1.0.1'
+
+    compile 'android.arch.persistence.room:runtime:'+
+            rootProject.archRoomVersion;
+    annotationProcessor 'android.arch.persistence.room:compiler:' +
+            rootProject.archRoomVersion;
+
     compile 'com.google.maps.android:android-maps-utils:0.4'
 }
