--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,9 +39,9 @@ dependencies {
     compile 'com.android.support:multidex:1.0.1'
 
     compile 'android.arch.persistence.room:runtime:'+
-            rootProject.archRoomVersion;
+            rootProject.archRoomVersion
     annotationProcessor 'android.arch.persistence.room:compiler:' +
-            rootProject.archRoomVersion;
+            rootProject.archRoomVersion
 
     compile 'com.google.maps.android:android-maps-utils:0.4'
 }
