--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 25
-    buildToolsVersion '25.0.0'
+    buildToolsVersion '26.0.2'
     useLibrary 'org.apache.http.legacy'
 
     defaultConfig {
@@ -12,7 +12,20 @@ android {
         versionCode 1
         versionName "1.0"
         multiDexEnabled true
+
+        buildConfigField "long", "SCAN_TIME", "60000"
+        buildConfigField "long", "START_DELAY", "3000"
+        buildConfigField "String", "API_BASE_URL", "\"http://agualva.niugis.com/websig/webservices/teste.php/\""
+        buildConfigField "String", "API_DATE_FORMAT", "\"ddMMyyyy'T'HH:mm:ss\""
+        buildConfigField "long", "API_TIMEOUT", "30"
+        buildConfigField "String", "NAME", "\"niuGIS_viewer\""
+
     }
+        /*compileOptions {
+            sourceCompatibility JavaVersion.VERSION_1_8
+            targetCompatibility JavaVersion.VERSION_1_8
+
+    }*/
     buildTypes {
         release {
             minifyEnabled false
@@ -42,6 +55,16 @@ dependencies {
             rootProject.archRoomVersion
     annotationProcessor 'android.arch.persistence.room:compiler:' +
             rootProject.archRoomVersion
+
+    compile 'com.google.code.gson:gson:2.8.1'
+
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'io.reactivex.rxjava2:rxjava:2.0.1'
+    compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    compile 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    compile 'com.squareup.okhttp3:okhttp:3.4.1'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.4.1'
 
     compile 'com.google.maps.android:android-maps-utils:0.4'
 }
